# depthai-ros-examples

./: .gitignore  Dockerfile  README.md  config.ini
.devcontainer/: devcontainer.json
.github/workflows/: main.workflow.yml
dai_turtlebot3_description/: CMakeLists.txt  package.xml
dai_turtlebot3_description/launch/: dai_nav2_follower.launch.py  dai_nav2_remote.launch.py  dai_pcl.launch.py  dai_robot.launch.py  dai_robot_only.launch.py  dai_scanner.launch.py  dai_turtlebot3_state_publisher.launch.py  turtlebot_rviz.launch.py  turtlebot_urdf.launch.py
dai_turtlebot3_description/maps/: map.pgm  map.yaml
dai_turtlebot3_description/param/: waffle_pi.yaml
dai_turtlebot3_description/rviz/: tbot_depth_scan.rviz  turtlebot.rviz
dai_turtlebot3_description/src/: dai_image_subscriber.cpp  dai_scanner_subscriber.cpp  dynamic_tracker.cpp
dai_turtlebot3_description/urdf/: turtlebot3_waffle_pi.urdf.xacro
depthai_cliff_detection/: CMakeLists.txt  README.md  package.xml
depthai_cliff_detection/config/: cliff_detection.yaml  params.yaml
depthai_cliff_detection/launch/: cliff_detection.launch.py
depthai_examples/: CMakeLists.txt  package.xml
depthai_examples/common_src/: CameraControl.cpp  DepthPostProcessing.cpp  ExposureParameters.cpp  FocusSettings.cpp  PostProcessing.cpp
depthai_examples/config/ros2_yaml/: stereo_node.yaml
depthai_examples/debian/: changelog  control  files  ros-galactic-depthai-examples.substvars  rules
depthai_examples/debian/.debhelper/ros-foxy-depthai-examples/: dbgsym-build-ids
depthai_examples/debian/.debhelper/ros-foxy-depthai-examples/dbgsym-root/DEBIAN/: control  md5sums
depthai_examples/debian/.debhelper/ros-foxy-depthai-examples/dbgsym-root/usr/share/doc/: ros-foxy-depthai-examples-dbgsym
depthai_examples/debian/.debhelper/ros-galactic-depthai-examples/: dbgsym-build-ids
depthai_examples/debian/.debhelper/ros-galactic-depthai-examples/dbgsym-root/DEBIAN/: control  md5sums
depthai_examples/debian/.debhelper/ros-galactic-depthai-examples/dbgsym-root/usr/share/doc/: ros-galactic-depthai-examples-dbgsym
depthai_examples/debian/ros-foxy-depthai-examples/DEBIAN/: control  md5sums
depthai_examples/debian/ros-foxy-depthai-examples/opt/ros/foxy/lib/depthai_examples/: crop_control_service  mobilenet_node  rgb_node  rgb_stereo_node  stereo_inertial_node  stereo_node  yolov4_spatial_node
depthai_examples/debian/ros-foxy-depthai-examples/opt/ros/foxy/share/ament_index/resource_index/package_run_dependencies/: depthai_examples
depthai_examples/debian/ros-foxy-depthai-examples/opt/ros/foxy/share/ament_index/resource_index/parent_prefix_path/: depthai_examples
depthai_examples/debian/ros-foxy-depthai-examples/opt/ros/foxy/share/depthai_examples/: local_setup.sh
depthai_examples/debian/ros-foxy-depthai-examples/opt/ros/foxy/share/depthai_examples/cmake/: depthai_examplesConfig-version.cmake
depthai_examples/debian/ros-galactic-depthai-examples/DEBIAN/: control  md5sums
depthai_examples/debian/ros-galactic-depthai-examples/opt/ros/galactic/lib/depthai_examples/: crop_control_service  mobilenet_node  rgb_node  rgb_stereo_node  stereo_inertial_node  stereo_node  yolov4_spatial_node
depthai_examples/debian/ros-galactic-depthai-examples/opt/ros/galactic/share/ament_index/resource_index/package_run_dependencies/: depthai_examples
depthai_examples/debian/ros-galactic-depthai-examples/opt/ros/galactic/share/ament_index/resource_index/parent_prefix_path/: depthai_examples
depthai_examples/debian/ros-galactic-depthai-examples/opt/ros/galactic/share/depthai_examples/: local_setup.dsv  local_setup.sh  package.dsv
depthai_examples/debian/ros-galactic-depthai-examples/opt/ros/galactic/share/depthai_examples/cmake/: depthai_examplesConfig.cmake
depthai_examples/include/: common.hpp
depthai_examples/include/depthai_examples/: daiUtility.hpp  nn_pipeline.hpp  rgb_pipeline.hpp  rgb_stereo_pipeline.hpp  stereo_from_host.hpp  stereo_pipeline.hpp  yolov4_spatial_pipeline.hpp
depthai_examples/launch/: mobile_publisher.launch  mobile_publisher.launch.py  pcl_launch.py  rgb_publisher.launch  rgb_publisher.launch.py  rgb_stereo_inertial_node.launch  rgb_stereo_node.launch  rgb_stereo_node.launch.py  stereeo_mimicer.launch  stereo.launch.py  stereo_inertial_node.launch  stereo_inertial_node.launch.py  stereo_launch.py  stereo_launch_opy.py  stereo_mimicer.launch  stereo_node.launch  stereo_nodelet.launch  yolov4_publisher.launch  yolov4_publisher.launch.py
depthai_examples/lib/: nn_pipeline.cpp  rgb_pipeline.cpp  rgb_stereo_pipeline.cpp  stereo_from_host.cpp  stereo_pipeline.cpp  yolov4_spatial_pipeline.cpp
depthai_examples/params/camera/: color.yaml  left.yaml  right.yaml
depthai_examples/ros1_scripts/: markerPublisher.py  undistort_omni.py
depthai_examples/ros1_src/: depth_crop_control.cpp  mobilenet_publisher.cpp  rgb_publisher.cpp  rgb_stereo_node.cpp  stereo_inertial_publisher.cpp  stereo_mimic_node.cpp  stereo_nodelet.cpp  stereo_publisher.cpp  yolov4_spatial_publisher.cpp
depthai_examples/ros2_src/: crop_control_service.cpp  depth_crop_control.cpp  mobilenet_publisher.cpp  rgb_publisher.cpp  rgb_stereo_node.cpp  rgb_video_subscriber.cpp  stereo_inertial_publisher.cpp  stereo_mimic_node.cpp  stereo_nodelet.cpp  stereo_publisher.cpp  yolov4_spatial_publisher.cpp
depthai_examples/rviz/: stereoInertialDepthAlign.rviz  stereoInertialROS1.rviz  stereoPointCloud.rviz  stereoPointCloud_v1.rviz  stereo_nodelet.rviz
depthai_examples/src/: crop_control_service.cpp  depth_crop_control.cpp  mobilenet_publisher.cpp  rgb_publisher.cpp  rgb_stereo_inertial_publisher.cpp  rgb_stereo_node.cpp  rgb_video_subscriber.cpp  stereo_inertial_publisher.cpp  stereo_mimic_node.cpp  stereo_nodelet.cpp  stereo_publisher.cpp  yolov4_spatial_publisher.cpp
depthai_examples_interfaces/: CMakeLists.txt  package.xml
