<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dai_turtlebot3_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sachin.guruswamy@gmail.com">sachin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <exec_depend>depthai_bridge</exec_depend> -->
  <exec_depend>turtlebot3_description</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>depthai_ros_msgs</depend>
  <depend>depthai_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
