<?xml version="1.0"?>
<package format="3">
  <name>depthai_examples</name>
  <version>0.0.0</version>
  <description>The depthai_examples package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sachin@luxonis.com">sachin</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <author>Sachin Guruswamy</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>vision_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>depthai_ros_msgs</depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <!-- <export>
    Other tools can request additional information be placed here

  </export> -->

</package>
